# whisperflow-studio

./: .gitignore  NOTICES.md  README.md  README.zh-TW.md  electron-builder.yml  package-lock.json  package.json  settings.example.json
.github/: release-download-guide.md
assets/: icon.icns
bridge/: run_cli.py
changelog/: v1.0.0.md  v1.1.0.md  v1.1.1.md  v1.10.0.md  v1.10.1.md  v1.11.0.md  v1.11.1.md  v1.11.2.md  v1.12.0.md  v1.13.0.md  v1.14.0.md  v1.15.0.md  v1.15.1.md  v1.15.2.md  v1.15.3.md  v1.15.4.md  v1.15.5.md  v1.15.6.md  v1.15.7.md  v1.15.8.md  v1.15.9.md  v1.16.0.md  v1.16.1.md  v1.16.2.md  v1.16.3.md  v1.16.4.md  v1.16.5.md  v1.2.0.md  v1.2.1.md  v1.3.0.md  v1.3.1.md  (+30 more)
python/: config_metadata.py  config_setting.py  faster-whisper-webui-cli.run.py  pyproject.toml  requirements.txt  subtitle_utils.py
python/common/: colors.py
python/config/: config.example.json  config.json  config.metadata.json
python/whisperflow/: __init__.py  cli.py  config.py  events.py  languages.py  progress.py  transcriber.py
python/whisperflow/audio/: source.py
python/whisperflow/models/: cache.py  device_probe.py  faster_whisper_backend.py  manager.py  progress_tqdm.py  registry.py  whisper_container.py
python/whisperflow/prompts/: base.py  json_prompt.py  prepend.py
python/whisperflow/subtitles/: writers.py
python/whisperflow/tests/: test_config.py  test_device_probe.py  test_events.py  test_languages.py  test_model_manager.py  test_prompts.py  test_segments.py  test_writers.py
python/whisperflow/vad/: base.py  parallel.py  periodic.py  segments.py  silero.py
(+129 files in other folders)
